docs(apiCalendar): Ajout docs de swagger #18
